--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <header class="header">
-        <button href="pages/login.html" class="login">دخول / تسجيل</button>
+        <a href="pages/login.html" target="_blank"><button class="login">دخول / تسجيل</button></a>
         <nav>
             <button class="theme" id="modes" ><i class="fa-solid fa-moon moon"></i> <i class="fa-solid fa-sun sun "></i></button>
             <a href="#home" class="nav-link">الرئسية</a>
