--- a/pages/coureses.html
+++ b/pages/coureses.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.7/css/bootstrap-grid.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"/>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/coureses.css">
     <title>Qatra</title>
 </head>
 <body>
-
+    
     <header class="header">
         <a href="pages/login.html" target="_blank"><button class="login">دخول / تسجيل</button></a>
         <nav>
@@ -21,27 +21,24 @@
             <a href="#home" class="nav-link">الرئسية</a>
             <a href="#coureses" class="nav-link">الدورات</a>
             <a href="#Payment" class="nav-link">الدفع</a>
-            <img src="images/Qatra.png" href="#home" class="logo">
+            <img src="style/Qatra.png" href="#home" class="logo">
         </nav>
     </header>
 
-    <section class="main" id="home">
-        <div class="conenr">
-            <h1 class="title-main" >
-                " لا يزال المرء عالماً ما دام في طلب العلم،فإذا ظن أنه قد علم فقد بدأ جهله "
-            </h1>
-            <button class="btn-main" href="#coureses">عرض الدورات</button>
+    <section class="main">
+        <div class="contenr">
+            <aside>
+                <nav>
+                    <div class="search-div">
+                        <input type="text" name="Search" class="search" id="search" placeholder="ماذا تريد البحث عنه">
+                        <button class="btn-i" ><i class="fa-solid fa-magnifying-glass magnifying"></i></button>
+                    </div>
+                </nav>
+            </aside>
         </div>
-
-        <div class="conenr2"></div>
-
     </section>
 
-    <footer class="footer">
-        <h3>© 2025 | جميع الحقوق محفوظة لمنصة قطرة</h3>
-    </footer>
-    
 </body>
-<script src="script.js"></script>
+<script src="js/coureses.js" ></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.7/js/bootstrap.min.js"></script>
 </html>
