--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
             <button class="theme" id="modes" ><i class="fa-solid fa-moon moon"></i> <i class="fa-solid fa-sun sun "></i></button>
             <a href="#home" class="nav-link">الرئسية</a>
-            <a href="#coureses" class="nav-link">الدورات</a>
+            <a href="pages/coureses.html" class="nav-link">الدورات</a>
             <a href="#Payment" class="nav-link">الدفع</a>
             <img src="images/Qatra.png" href="#home" class="logo">
         </nav>
